# web-cli-oidc-sso

./: .gitignore  LICENSE  docker-compose.yml  pyproject.toml  readme.md
api_server/: Dockerfile  cache.py  config.py  main.py  oauth.py  requirements.txt
api_server/middleware/: access_validator.py
api_server/routers/: api.py  auth_device.py  auth_web.py
cli_app/: api_call.py  auth.py  cli.py  commands.py
dev/: docker-compose.yml
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json
frontend/public/: config.json
frontend/src/: App.js
frontend/src/components/: Login.js  Logout.js  SayHello.js
frontend/src/pages/: Callback.js  Home.js
frontend/src/utils/: axiosInstance.js  config.js
