[tool.poetry]
name = "cli_app"
version = "0.1.0"
description = "A CLI application"
authors = ["Alexander Kharkevich <alexander_kharkevich@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
colorlogging = "0.0.2"
click = "8.1.7"
httpx = "0.27.2"

[tool.poetry.scripts]
cli-app = "cli_app.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
